--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
   
   
-  <img src="/ping-comming-soon-page/images/illustration-dashboard.png" class="img" alt="image" width="550" height="450">
+  <img src="https://garab02.github.io/ping-comming-soon-page//images/illustration-dashboard.png" class="img" alt="image" width="550" height="450">
   
   <p>&copy; Copyright Ping. All rights reserved.</p>
   </div>
